--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.5",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "chokidar": "^3.5.3",
     "js-cookie": "^2.2.1",
     "react": "^17.0.2",
@@ -16,9 +20,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.6.2"
   },
   "scripts": {
+    "build": "tsc",
+    "prestart": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
