--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jest": "^27.4.1",
+    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
