--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-redux": "^7.1.23",
+    "@types/js-cookie": "^3.0.1",
     "chokidar": "^3.5.3",
     "js-cookie": "^2.2.1",
     "react": "^17.0.2",
