--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "npm": "7.24.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
+    "@types/react-router-dom": "^5.3.3",
     "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.13"
   }
 }
